--- a/index.html
+++ b/index.html
@@ -1,198 +1,232 @@
- <!doctype html>
+<!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Website</title>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/foundation.min.css">
-    <link rel="stylesheet" href="css/app.css">
-  </head>
-  <body>
-    <section class="topsection">
-      <div class="row">
-        <div class="columns medium-6 ">
-          <div class="logo">
-            <img src="assets/img/thumbnail/logo.png" alt="Logo">
+ <head>
+   <meta charset="utf-8">
+   <meta http-equiv="x-ua-compatible" content="ie=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Our Website</title>
+   <link rel="stylesheet" href="css/font-awesome.min.css">
+   <link rel="stylesheet" href="css/foundation.min.css">
+   <link rel="stylesheet" href="css/app.css">
+ </head>
+ <body>
+    <div class="row" style="margin-top:1%;">
+      <div class="columns">
+        <div class="large-12 columns medium-centered columns align-self-middel">
+          <div class="callot">
+            <label>
+            <img src="assets/img/thumbnail/ddslogo.png" style='height: 150px; width: 150px'/>
+            <img src="assets/img/thumbnail/dds.png" style='height: 50px%; width: 50px%'/>
+            <b style="font-size: 80px; font-style: arial; color: #666664;">LABSOB.ID</b>
+            </label>
           </div>
-        </div>
-        <div class="columns medium-6">
-          <div class="login">
-            <img src="assets/img/thumbnail/login.png" alt="Login">
-          </div>
-        </div>
-      </div>
-    </section>
-  <section class="mainmenu">
-    <div class="row">
-      <div class="top-bar">
-        <div class="top-bar-left">
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">CONTACT US</a></li>
-          </ul>
-        </div>
-        <div class="top-bar-right">
-          <ul class="menu">
-            <li><input type="search" placeholder="Search destination"></li>
-            <li><button type="button" class="button">Search</button></li>
-          </ul>
         </div>
       </div>
     </div>
-  </section>
+  <!-- <section class="topsection">
+     <div class="row">
+       <div class="columns medium-6 ">
+         <div class="logo">
+           <img src="assets/img/thumbnail/logo.png" alt="Logo">
+         </div>
+       </div>
+       <div class="columns medium-6">
+         <div class="login">
+           <img src="assets/img/thumbnail/login.png" alt="Login">
+         </div>
+       </div>
+     </div>
+   </section>
+ <section class="mainmenu">
+   <div class="row">
+     <div class="top-bar">
+       <div class="top-bar-left">
+         <ul class="dropdown menu" data-dropdown-menu>
+           <li><a href="#">HOME</a></li>
+           <li><a href="#">ABOUT US</a></li>
+           <li><a href="#">CONTACT US</a></li>
+         </ul>
+       </div>
+       <div class="top-bar-right">
+         <ul class="menu">
+           <li><input type="search" placeholder="Search destination"></li>
+           <li><button type="button" class="button">Search</button></li>
+         </ul>
+       </div>
+     </div>
+   </div>
+ </section>//-->
 <section class="slidersection">
-  <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-  <div class="orbit-wrapper">
-    <div class="orbit-controls">
-      <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-      <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-    </div>
-    <ul class="orbit-container">
-      <li class="is-active orbit-slide">
-        <figure class="orbit-figure">
-          <img class="orbit-image" src="assets/img/thumbnail/banner.png" alt="Space">
-          <figcaption class="orbit-caption">Welcome to our website</figcaption>
-        </figure>
-      </li>
-      <li class="orbit-slide">
-        <figure class="orbit-figure">
-          <img class="orbit-image" src="assets/img/thumbnail/banner3.png" alt="Space">
-          <figcaption class="orbit-caption">Our website title</figcaption>
-        </figure>
-      </li>
-      <li class="orbit-slide">
-        <figure class="orbit-figure">
-          <img class="orbit-image" src="assets/img/thumbnail/banner2.png" alt="Space">
-          <figcaption class="orbit-caption">Here will be title of website</figcaption>
-        </figure>
-      </li>
-    </ul>
-  </div>
-  <nav class="orbit-bullets">
-    <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
-    <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-    <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-    </nav>
+ <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+ <div class="orbit-wrapper">
+   <div class="orbit-controls">
+     <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+     <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+   </div>
+   <ul class="orbit-container">
+     <li class="is-active orbit-slide">
+       <figure class="orbit-figure">
+         <img class="orbit-image" src="assets/img/thumbnail/landing1.jpg" alt="Space">
+         <figcaption class="orbit-caption">Welcome to our website</figcaption>
+       </figure>
+     </li>
+     <li class="orbit-slide">
+       <figure class="orbit-figure">
+         <img class="orbit-image" src="assets/img/thumbnail/landing2.jpg" alt="Space">
+         <figcaption class="orbit-caption">Our website title</figcaption>
+       </figure>
+     </li>
+     <li class="orbit-slide">
+       <figure class="orbit-figure">
+         <img class="orbit-image" src="assets/img/thumbnail/landing3.png" alt="Space">
+         <figcaption class="orbit-caption">Here will be title of website</figcaption>
+       </figure>
+     </li>
+   </ul>
+ </div>
+ <nav class="orbit-bullets">
+   <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+   <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+   <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+   </nav>
 </div>
 </section>
 <section class="servicesection text-center">
-  <div class="row">
-    <div class="service">
-      <h2>EXPLORE <span class="makebold">INDONESIA</span> SHOULD BE A POPULAR DESTINATION</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </div>
+ <div class="row">
+   <div class="service">
+     <h2><span class="makebold">WELCOME</span> TO OUR WEBSITE</h2>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ </div>
 </section>
 <section class="productsection">
-  <div class="grid-container">
-  <div class="grid-x grid-padding-x small-up-2 medium-up-3">
-    <div class="cell">
-      <div class="card">
-        <img src="assets/img/thumbnail/bali.jpg">
-        <div class="card-section">
-          <h4>BALI</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-        </div>
-      </div>
-    </div>
-    <div class="cell">
-      <div class="card">
-        <img src="assets/img/thumbnail/lombok.jpg">
-        <div class="card-section">
-          <h4>LOMBOK</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-        </div>
-      </div>
-    </div>
-    <div class="cell">
-      <div class="card">
-        <img src="assets/img/thumbnail/yogyakarta.jpg">
-        <div class="card-section">
-          <h4>YOGYAKARTA</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+ <div class="grid-container text-center">
+ <div class="grid-x grid-padding-x small-up-2 medium-up-3">
+   <div class="cell">
+     <div class="card">
+       <a href ="https://labsob.id/owner/"><img src="assets/img/thumbnail/siem.svg"></a>
+       <div class="card-section">
+         <a class="expanded button hollow" href ="https://labsob.id/owner/"><h4><span class="makebold">SIEM</span></h4></a>
+       </div>
+     </div>
+   </div>
+   <div class="cell">
+     <div class="card">
+       <a href="https://nms.labsob.id/"><img src="assets/img/thumbnail/nms.png"></a>
+       <div class="card-section">
+         <a class="expanded button hollow" href="https://nms.labsob.id/"><h4 class="makebold"><span>NMS</span></h4></a>
+       </div>
+     </div>
+   </div>
+   <div class="cell">
+     <div class="card">
+       <a href="https://rapidity.labsob.id/"><img src="assets/img/thumbnail/rapidity.png"></a>
+       <div class="card-section">
+         <a class="expanded button hollow" href="https://rapidity.labsob.id/"><h4><span class="makebold">Rapidity</span></h4></a>
+       </div>
+     </div>
+   </div>
+ </div>
 </div>
-<div class="grid-container">
+<div class="grid-container text-center">
 <div class="grid-x grid-padding-x small-up-2 medium-up-3">
-  <div class="cell">
-    <div class="card">
-      <img src="assets/img/thumbnail/papua.jpg">
-      <div class="card-section">
-        <h4>PAPUA</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <img src="assets/img/thumbnail/maluku.jpg">
-      <div class="card-section">
-        <h4>MALUKU</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-      </div>
-    </div>
-  </div>
-  <div class="cell">
-    <div class="card">
-      <img src="assets/img/thumbnail/sulawesi.jpg">
-      <div class="card-section">
-        <h4>SULAWESI</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-      </div>
-    </div>
-  </div>
+ <div class="cell">
+   <div class="card">
+     <a href="https://acs.labsob.id/"><img src="assets/img/thumbnail/acs.png"></a>
+     <div class="card-section">
+       <a class="expanded button hollow" href="https://acs.labsob.id/"><h4><span class="makebold">ACS</span></h4></a>
+     </div>
+   </div>
+ </div>
+ <div class="cell">
+   <div class="card">
+     <a href="https://ness.labsob.id/"><img src="assets/img/thumbnail/nessus.png"></a>
+     <div class="card-section">
+       <a class="expanded button hollow" href="https://ness.labsob.id/"><h4><span class="makebold">Nessus</span></h4></a>
+     </div>
+   </div>
+ </div>
+ <div class="cell">
+   <div class="card">
+     <a href="https://storage.labsob.id/"><img src="assets/img/thumbnail/storage.png"></a>
+     <div class="card-section">
+       <a class="expanded button hollow" href="https://storage.labsob.id/"><h4><span class="makebold">Storage</span></h4></a>
+     </div>
+   </div>
+ </div>
+</div>
+</div>
+<div class="grid-container text-center">
+<div class="grid-x grid-padding-x small-up-2 medium-up-3">
+ <div class="cell">
+   <div class="card">
+     <a href="https://sample.labsob.id/"><img src="assets/img/thumbnail/oauth2.png"></a>
+     <div class="card-section">
+       <a class="expanded button hollow" href="https://sample.labsob.id/"><h4><span class="makebold">OAuth2</span></h4></a>
+     </div>
+   </div>
+ </div>
+ <div class="cell">
+   <div class="card">
+     <a href="https://mobsf.labsob.id/"><img src="assets/img/thumbnail/android.png"></a>
+     <div class="card-section">
+       <a class="expanded button hollow" href="https://mobsf.labsob.id/"><h4><span class="makebold">Android App Static Analysis</span></h4></a>
+     </div>
+   </div>
+ </div>
+ <div class="cell">
+   <div class="card">
+     <a href="https://stack.labsob.id/"><img src="assets/img/thumbnail/stack.png"></a>
+     <div class="card-section">
+       <a class="expanded button hollow" href="https://stack.labsob.id/"><h4><span class="makebold">Open Stack</span></h4></a>
+     </div>
+   </div>
+ </div>
+</div>
+</div>
+<div class="grid-container text-center">
+<div class="grid-x grid-padding-x small-up-2 medium-up-3">
+<div class="cell">
+ <div class="card">
+   <a href="http://mano.labsob.id/"><img src="assets/img/thumbnail/mano.jpg"></a>
+   <div class="card-section">
+     <a class="expanded button hollow" href="http://mano.labsob.id/"><h4><span class="makebold">MANO</span></h4></a>
+   </div>
+ </div>
+</div>
+<div class="cell">
+ <div class="card">
+   <a href="http://kibana.labsob.id/"><img src="assets/img/thumbnail/wazuh.jpg"></a>
+   <div class="card-section">
+     <a class="expanded button hollow" href="http://kibana.labsob.id/"><h4><span class="makebold">WAZUH</span></h4></a>
+   </div>
+ </div>
+</div>
+<div class="cell">
+ <div class="card">
+   <a href="http://mayan.labsob.id/"><img src="assets/img/thumbnail/edms.png"></a>
+   <div class="card-section">
+     <a class="expanded button hollow" href="http://mayan.labsob.id"><h4><span class="makebold">EDMS</span></h4></a>
+   </div>
+ </div>
+</div>
 </div>
 </div>
 </section>
 
-
-<section class="brand">
-  <div class="row">
-  <div class="medium-3 columns">
-    <div class="samebrand">
-      <img src="assets/img/thumbnail/brand.png">
-    </div>
-  </div>
-
-  <div class="medium-3 columns">
-    <div class="samebrand">
-      <img src="assets/img/thumbnail/brand1.png">
-    </div>
-  </div>
-
-  <div class="medium-3 columns">
-    <div class="samebrand">
-      <img src="assets/img/thumbnail/brand2.png">
-    </div>
-  </div>
-
-  <div class="medium-3 columns">
-    <div class="samebrand">
-      <img src="assets/img/thumbnail/brand3.png">
-    </div>
-  </div>
-</div>
+<section class="">
+ <div class="row container text-center">
+   <div class="small-12 columns">
+     <div class="footercenter">
+       <h4><p style="font-style: ; font-size : 18px; color : #A5A5A5;">&copy; 2019<script>new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script> Infrastructure Research & Standarization (IRS)</p></h4>
+     </div>
+   </div>
+ </div>
 </section>
 
-<section class="footerbottom">
-  <div class="row">
-    <div class="medium-12 columns">
-      <div class="footercenter">
-        <p>&copy; 2018 Holiday. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+   <script src="js/vendor/jquery.js"></script>
+   <script src="js/vendor/what-input.js"></script>
+   <script src="js/vendor/foundation.js"></script>
+   <script src="js/app.js"></script>
+ </body>
 </html>
